their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.  A copy of
the CVS logs is updated daily at the following URL:

  http://maptools.org/dl/mapserver_Changelog.txt


Version 4.99 (CVS HEAD)
-----------------------

 - [OGC:SOS] : Fixed bugs realted to metadata and xml output
               (1731, 1739, 1740, 1741).  Fixed bug with large xml output (1938)

Version 4.10.0 (2006-10-04)
---------------------------

- No source code changes since 4.10.0-rc1

Known issues in 4.10.0:

- PHP5 not detected properly on Mandriva Linux (bug 1923)

- Mapfile INCLUDE does not work with relative paths on Windows (bug 1880)

- Curved labels don't work with multibyte character encodings (bug 1921)

- Quotes in DATA or CONNECTION strings produce parsing errors (bug 1549)



Version 4.10.0-RC1 (2006-09-27)
-------------------------------

- SLD: quantity values for raster sld can be float values instead of just 
   being integer

- Hiding labelitemindex, labelsizeitemindex, labelangleitemindex
  from the SWIG interface (bug 1906)

- Fixed computation of geotransform to match BBOX (to edges of image) not
  map.extent (to center of edge pixels).  (bug 1916)

- mapraster.c: Use msResampleGDALToMap() for "upside down" images. (bug 1904)


Version 4.10.0-beta3 (2006-09-06)
---------------------------------

- Web Map Context use format metadata when formatlist not available. (bug 1723)

- Web Map Context boolean values true/false now interpreted. (bug 1692)

- Added support for MULTIPOLYGON, MULTILINESTRING, and MULTIPOINT in 
  msShapeFromWKT() when going through OGR (i.e. GEOS disabled) (bug 1891)

- Fixed MapScript getExpressionString() that was failing on expressions
  longer that 256 chars (SWIG) and 512 chars (PHP). (bug 1428)

- WMSSLD: use Title of Rule if Name not present (bug 1889)

- Fixed syntax error (for visual c++) in mapimagemap.c. 
